// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FailureSwitcher render component not found failure should render a category not found failure and match snapshot 1`] = `
<Translate(Failure)
  errorMessage="not-found.category"
  goToMessage="goTo.categories"
  goToPath="/augsburg/de"
/>
`;

exports[`FailureSwitcher render component not found failure should render a event not found failure and match snapshot 1`] = `
<Translate(Failure)
  errorMessage="not-found.event"
  goToMessage="goTo.events"
  goToPath="/augsburg/de/events"
/>
`;

exports[`FailureSwitcher render component not found failure should render a extra not found failure and match snapshot 1`] = `
<Translate(Failure)
  errorMessage="not-found.extra"
  goToMessage="goTo.extras"
  goToPath="/augsburg/de/extras"
/>
`;

exports[`FailureSwitcher should render a LanguageFailure if there is a LanguageNotFoundError 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      not-found.pageTitle
    </title>
  </HelmetWrapper>
  <Connect(Translate(LanguageFailure))
    city="augsburg"
  />
</Fragment>
`;

exports[`FailureSwitcher should render a content not found failure if there is a ContentNotFoundError 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      not-found.pageTitle
    </title>
  </HelmetWrapper>
  <Translate(Failure)
    errorMessage="not-found.extra"
    goToMessage="goTo.extras"
    goToPath="/augsburg/de/extras"
  />
</Fragment>
`;

exports[`FailureSwitcher should render a failure as default 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      pageTitle
    </title>
  </HelmetWrapper>
  <Translate(Failure)
    errorMessage="error message"
  />
</Fragment>
`;
